gen/v25.1/rpk/rpk-cluster-storage-restore-start.adoc
= rpk cluster storage restore start
:description: rpk cluster storage restore start

Start the topic restoration process.
		
This command starts the process of restoring topics from the archival bucket.
If the wait flag (--wait/-w) is set, the command will poll the status of the
recovery process until it's finished.

== Usage

[,bash]
----
rpk cluster storage restore start [flags]
----

== Flags

[cols="1m,1a,2a"]
|===
|*Value* |*Type* |*Description*

|-h, --help |- |Help for start.

|--polling-interval |duration |The status check interval (e.g. '30s', '1.5m'); ignored if --wait is not used (default 5s).

|-w, --wait |- |Wait until auto-restore is complete.

|--config |string |Redpanda or rpk config file; default search paths are `/var/lib/redpanda/.config/rpk/rpk.yaml`, `$PWD/redpanda.yaml`, and `/etc/redpanda/redpanda.yaml`.

|-X, --config-opt |stringArray |Override rpk configuration settings; '-X help' for detail or '-X list' for terser detail.

|--profile |string |rpk profile to use.

|-v, --verbose |- |Enable verbose logging.
|===